restrict the max-width of large images, fix scrolling when width collapses to a 'smartphone' scenario.

--- a/readdy_documentation/_sass/_base.scss
+++ b/readdy_documentation/_sass/_base.scss
@@ -41,12 +41,13 @@ html {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   font-size: 14px;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 @media (min-width: $transition-to-side) {
   html {
     font-size: 14px;
+    overflow: hidden;
   }
 }
 
