--- a/readdy_documentation/_sass/_main.scss
+++ b/readdy_documentation/_sass/_main.scss
@@ -1,9 +1,6 @@
 .main-container {
   background-color: $body-background;
   line-height: 1.5;
-  table {
-    margin: auto;
-  }
 }
 
 @media (min-width: $transition-to-side) {
@@ -24,6 +21,9 @@
   line-height: 1.5;
   table {
     margin: auto;
+  }
+  img{
+    max-width: 37rem;
   }
 }
 
